architectural optimization